improved the procedure to compute the upper bound on x variables by solving the knapsack problem

--- a/notebooks/svd_decomposition.ipynb
+++ b/notebooks/svd_decomposition.ipynb
@@ -191,6 +191,29 @@
     "normal_vector_final = normal_vector / normal_vector[1]\n",
     "print(normal_vector_final)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d327ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyomo.environ import *\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "025416bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model - ConcreteMode()\n",
+    "\n",
+    "model.x= RangeSet(1, 4)"
+   ]
   }
  ],
  "metadata": {
