changed code to consider a startup cost factor in the generations of the instances

--- a/bash_invalidrecords.ipynb
+++ b/bash_invalidrecords.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "7730b9c5",
    "metadata": {},
    "outputs": [
@@ -10,16 +10,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sbatch --array=37,38,39,41,67,68,69,74,76,77,79,94,95,100,101,106,121,124,125,130,131,133,134,142,199,200,203,204,226,227,228,229,230,231,235,236,238,239,256,257,258,262,268,283,286,287,288,292,293,295,296,304,305,361,362,363,366,367,368,390,391,392,393,397,398,399,400,401,404,418,419,420,424,425,430,445,448,449,454,455,457,458,459,466,467,523,524,525,527,550,552,553,554,555,559,560,561,562,563,567,580,581,582,586,592,607,608,610,611,617,619,620,628,629,685,686,687,689,713,715,716,717,721,722,724,725,727,742,743,749,754,769,770,772,773,779,781,783,790,791,848,849,854,877,878,879,880,883,884,885,886,887,904,905,906,910,911,932,940,941,943,945,952,953,1010,1011,1016,1037,1039,1040,1041,1045,1046,1048,1049,1051,1053,1066,1067,1068,1072,1078,1096,1103,1105,1106,1107,1114,1115,1171,1172,1173,1175,1201,1202,1203,1207,1208,1210,1211,1213,1228,1229,1230,1234,1235,1240,1258,1259,1260,1264,1265,1267,1268,1269,1276,1277,1333,1334,1335,1363,1364,1365,1366,1367,1369,1370,1372,1373,1376,1390,1391,1392,1396,1402,1417,1420,1421,1429,1430,1431,1438,1439,1495,1496,1497,1498,1499,1501,1503,1525,1526,1527,1531,1532,1534,1535,1538,1552,1553,1554,1558,1582,1583,1584,1588,1589,1591,1592,1600,1601,1658,1659,1664,1665,1685,1687,1688,1689,1693,1694,1695,1696,1697,1700,1714,1715,1716,1726,1744,1745,1750,1753,1754,1762,1763,1819,1820,1821,1822,1823,1849,1850,1851,1855,1856,1858,1859,1863,1876,1877,1882,1903,1904,1906,1907,1908,1912,1913,1915,1916,1924 slurm.sh\n"
+      "148\n",
+      "sbatch --array=39,41,67,68,69,74,76,77,94,95,124,142,200,229,230,231,235,238,239,256,257,258,286,288,295,296,305,391,392,393,397,398,400,401,418,419,466,524,525,553,554,555,560,562,563,580,581,582,607,611,685,715,716,717,721,722,742,743,773,790,854,877,878,879,883,884,886,887,904,905,906,910,953,1010,1039,1040,1041,1045,1046,1048,1049,1066,1067,1068,1201,1202,1203,1207,1210,1211,1228,1229,1230,1240,1258,1267,1277,1363,1364,1365,1369,1370,1372,1373,1390,1391,1402,1417,1420,1429,1438,1439,1498,1501,1503,1525,1526,1527,1531,1532,1534,1535,1552,1553,1554,1687,1688,1689,1693,1694,1696,1697,1714,1715,1716,1726,1745,1753,1762,1819,1820,1821,1849,1850,1851,1858,1877,1908 slurm.sh\n",
+      "Unique prefixes and associated job IDs:\n",
+      "network_4_0_33_1.4_0.5_10: [39, 525, 1821]\n",
+      "network_4_0_33_1.4_0.6_5: [41]\n",
+      "network_4_0_36_1.4_0.6_1: [67, 229, 391, 553, 715, 877, 1039, 1201, 1363, 1525, 1687, 1849]\n",
+      "network_4_0_36_1.4_0.6_5: [68, 230, 392, 554, 716, 878, 1040, 1202, 1364, 1526, 1688, 1850]\n",
+      "network_4_0_36_1.4_0.6_10: [69, 231, 393, 555, 717, 879, 1041, 1203, 1365, 1527, 1689, 1851]\n",
+      "network_4_0_36_1.6_0.5_5: [74, 398, 560, 722, 884, 1046, 1370, 1532, 1694]\n",
+      "network_4_0_36_1.6_0.6_1: [76, 238, 400, 562, 886, 1048, 1210, 1372, 1534, 1696, 1858]\n",
+      "network_4_0_36_1.6_0.6_5: [77, 239, 401, 563, 887, 1049, 1211, 1373, 1535, 1697]\n",
+      "network_4_0_39_1.4_0.6_1: [94, 256, 418, 580, 742, 904, 1066, 1228, 1390, 1552, 1714]\n",
+      "network_4_0_39_1.4_0.6_5: [95, 257, 419, 581, 743, 905, 1067, 1229, 1391, 1553, 1715, 1877]\n",
+      "network_4_0_42_1.4_0.7_1: [124, 286, 1258, 1420]\n",
+      "network_4_0_45_1.2_0.7_1: [142, 466, 790, 1438, 1762]\n",
+      "network_4_0_33_1.4_0.5_5: [200, 524, 1010, 1820]\n",
+      "network_4_0_36_1.6_0.5_1: [235, 397, 721, 883, 1045, 1207, 1369, 1531, 1693]\n",
+      "network_4_0_39_1.4_0.6_10: [258, 582, 906, 1068, 1230, 1554, 1716]\n",
+      "network_4_0_42_1.4_0.7_10: [288, 1908]\n",
+      "network_4_0_42_1.6_0.7_1: [295, 1267, 1429, 1753]\n",
+      "network_4_0_42_1.6_0.7_5: [296]\n",
+      "network_4_0_45_1.2_0.7_5: [305, 953, 1277, 1439]\n",
+      "network_4_0_42_1.4_0.6_1: [607, 1417]\n",
+      "network_4_0_42_1.4_0.7_5: [611, 773, 1745]\n",
+      "network_4_0_33_1.4_0.5_1: [685, 1819]\n",
+      "network_4_0_33_1.4_0.7_5: [854]\n",
+      "network_4_0_39_1.6_0.5_1: [910]\n",
+      "network_4_0_39_1.6_0.7_1: [1240, 1402, 1726]\n",
+      "network_4_0_33_1.4_0.6_1: [1498]\n",
+      "network_4_0_33_1.4_0.7_1: [1501]\n",
+      "network_4_0_33_1.4_0.7_10: [1503]\n"
      ]
     }
    ],
    "source": [
     "\n",
     "import pandas as pd\n",
+    "from collections import defaultdict\n",
     "\n",
     "# Load the Excel file and the \"Invalid Records\" sheet\n",
     "df = pd.read_excel(\"src/results/aggregated_results.xlsx\", sheet_name=\"Invalid Records\", header=None)\n",
+    "\n",
+    "# Convert records to string and strip whitespace\n",
+    "records = df[0].astype(str).str.strip()\n",
     "\n",
     "# Extract the last number from each record\n",
     "# Assuming the record format is like: network_4_0_39_1.6_0.7_1_1078\n",
@@ -33,8 +67,24 @@
     "\n",
     "# Construct the sbatch command\n",
     "sbatch_command = f\"sbatch --array={array_values} slurm.sh\"\n",
+    "print(len(numbers))\n",
+    "print(sbatch_command)\n",
     "\n",
-    "print(sbatch_command)"
+    "# Extract prefix and ID from each record\n",
+    "prefix_id_pairs = records.apply(lambda x: ('_'.join(x.split('_')[:-1]), int(x.split('_')[-1])))\n",
+    "\n",
+    "# Group IDs by prefix\n",
+    "prefix_to_ids = defaultdict(set)\n",
+    "for prefix, job_id in prefix_id_pairs:\n",
+    "    prefix_to_ids[prefix].add(job_id)\n",
+    "\n",
+    "# Optional: sort the IDs for each prefix\n",
+    "prefix_to_ids = {prefix: sorted(list(ids)) for prefix, ids in prefix_to_ids.items()}\n",
+    "\n",
+    "# Print the mapping\n",
+    "print(\"Unique prefixes and associated job IDs:\")\n",
+    "for prefix, ids in prefix_to_ids.items():\n",
+    "    print(f\"{prefix}: {ids}\")"
    ]
   }
  ],
