improved code documentation for the performance chart notebook

--- a/performance_charts.ipynb
+++ b/performance_charts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "7730b9c5",
    "metadata": {},
    "outputs": [
@@ -49,7 +49,6 @@
     }
    ],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
@@ -57,29 +56,17 @@
     "import numpy as np\n",
     "import itertools\n",
     "\n",
-    "\n",
-    "\n",
     "# Read in Excel Data\n",
     "EXCEL_FILE = 'src/results/aggregated_results.xlsx'\n",
     "#df = pd.read_excel(EXCEL_FILE, sheet_name = 'MIPGAP-1x10-4')\n",
     "#df = pd.read_excel(EXCEL_FILE, sheet_name = 'MIPGAP-10x10-4')\n",
-    "#df = pd.read_excel(EXCEL_FILE, sheet_name = 'MIPGAP-100x10-4_Tau_2_0')\n",
-    "#df = pd.read_excel(EXCEL_FILE, sheet_name = 'MIPGAP-100x10-4_Beta_0_8')\n",
-    "#df = pd.read_excel(EXCEL_FILE, sheet_name = 'MIPGAP-100x10-4_Cost_1')\n",
     "df = pd.read_excel(EXCEL_FILE, sheet_name = 'MIPGAP-100x10-4')\n",
-    "#df = pd.read_excel(EXCEL_FILE, sheet_name = 'Valid Records')\n",
     "\n",
     "# Ensure Relative Gap is numeric and fill NAs with a high value to mark them as invalid\n",
-    "# Generate Instance column and populate\n",
-    "\n",
-    "\"\"\" def create_name(row):\n",
-    "    return f\"Network{row['Network']}.{row['Relaxation']}.{row['Demand']}.{row['Eta']}.{row['Horizon']}.{row['Tau Range']}\"\n",
-    "df['Instance'] = df.apply(create_name, axis=1) \"\"\"\n",
-    "\n",
     "df['Relative Gap'] = pd.to_numeric(df['Relative Gap'], errors='coerce')  # Convert to numeric, coerce bad values to NaN\n",
     "df['Relative Gap'] = df['Relative Gap'].fillna(999)  # Treat NaNs as invalid by setting a large dummy value\n",
     "\n",
-    "# --- FILTER 1: filter out instances with any formulation having Relative Gap > 0.005\n",
+    "# Include FILTER 1: filter out instances with any formulation having Relative Gap > 0.005\n",
     "invalid_instances = df[\n",
     "    (df['Time (s)'] < 1)\n",
     "    #| (df['Relative Gap'] > 1)         \n",
@@ -87,12 +74,10 @@
     "]['Instance'].unique()\n",
     "\n",
     "df_filtered = df[~df['Instance'].isin(invalid_instances)].copy()\n",
-    "\n",
     "print(len(df_filtered))\n",
-    "\n",
     "print(f\"First filter-Remove if there is at least 1 formulation not solved: {invalid_instances}\")\n",
     "\n",
-    "# --- FILTER 2: filter out instances where all formulations have solution time less than \"x\" or greater than \"y\"\n",
+    "# Include FILTER 2: filter out instances where all formulations have solution time less than \"x\" or greater than \"y\"\n",
     "def all_gaps_above_threshold(group):\n",
     "    return (\n",
     "        (group['Time (s)'] <= 600) \n",
@@ -105,7 +90,6 @@
     "\n",
     "# Filter out those instances\n",
     "df_filtered = df_filtered[~df_filtered['Instance'].isin(instances_to_remove)].copy()\n",
-    "\n",
     "print(len(df_filtered))\n",
     "\n",
     "# Plot selected formulations for comparison\n",
@@ -122,6 +106,7 @@
     "                        'F11_UB_X_YS_Group_K', \n",
     "                        'F12_All'\n",
     "                        ]\n",
+    "\n",
     "df_filtered = df_filtered[df_filtered['Formulation'].isin(selected_formulations)].copy()\n",
     "\n",
     "# Identify all unique formulations\n",
@@ -137,13 +122,12 @@
     "\n",
     "# Sort instances by minimum time for plotting\n",
     "instance_order = df_filtered.groupby('Instance')['Time (s)'].min().sort_values().index\n",
-    "\n",
     "print(f\"Number of complete instances: {len(instance_order)}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "2b8a0c7f",
    "metadata": {},
    "outputs": [
@@ -258,11 +242,8 @@
     "for formulation, group in df_filtered.groupby('Formulation'):\n",
     "\n",
     "    group_sorted = group.sort_values(by='Time (s)')  # Sort each formulation's data by time\n",
-    "    #print(f'Group Sorted = {group_sorted}')\n",
     "    total_instances = len(instance_order)\n",
-    "    #print(f'Total Instances = {total_instances}')\n",
     "    y_positions = (np.arange(len(group_sorted)) + 1) / total_instances  # Normalize to [0, 1]\n",
-    "    #print(f'Y positions = {y_positions}')\n",
     "    style = formulation_styles.get(formulation, {'linestyle': '-', 'marker': 'o', 'color': 'red'})\n",
     "    sgm_formulation[formulation] = shifted_geometric_mean(group_sorted['Time (s)'].tolist(), 1)\n",
     "    am_formulation[formulation] = arithmetic_mean(group_sorted['Time (s)'].tolist())\n",
@@ -271,7 +252,6 @@
     "    line, = plt.plot(group_sorted['Time (s)'] /1000,\n",
     "        y_positions,\n",
     "        linestyle=style['linestyle'],\n",
-    "        # marker=style['marker'],\n",
     "        color=style['color'],                 # Set the line color\n",
     "        markerfacecolor=style['color'],       # Explicitly set marker face color\n",
     "        markeredgecolor=style['color'],       # Explicitly set marker edge color\n",
@@ -324,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "a772a4cd",
    "metadata": {},
    "outputs": [
@@ -355,6 +335,10 @@
     }
    ],
    "source": [
+    "##################################################\n",
+    "# Plot results based on the shifted average mean #\n",
+    "##################################################\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Sort dictionary by value (ascending)\n",
@@ -394,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "bdfde19b",
    "metadata": {},
    "outputs": [
@@ -429,11 +413,13 @@
     }
    ],
    "source": [
+    "#########################################################\n",
+    "# Plot the average integrality gap for each formulation #\n",
+    "#########################################################\n",
+    "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "\n",
-    "# --- assume df_filtered is your DataFrame ---\n",
     "\n",
     "# Helper: convert comma decimals to floats\n",
     "def comma_to_float(x):\n",
@@ -512,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "89f9487b",
    "metadata": {},
    "outputs": [
@@ -543,6 +529,10 @@
     }
    ],
    "source": [
+    "##################################################\n",
+    "# Plot results based on the arithmetic mean      #\n",
+    "##################################################\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Sort dictionary by value (ascending)\n",
@@ -582,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "21465d39",
    "metadata": {},
    "outputs": [
@@ -598,6 +588,10 @@
     }
    ],
    "source": [
+    "#########################################################\n",
+    "# Plot the integrality gap of some instances            #\n",
+    "#########################################################\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
